--- a/controller/impl/pom.xml
+++ b/controller/impl/pom.xml
@@ -18,12 +18,12 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <relativePath/>
   </parent>
 
-  <groupId>org.jbh.controller</groupId>
-  <artifactId>controller-impl</artifactId>
+  <groupId>org.jbh.flowcontroller</groupId>
+  <artifactId>flowcontroller-impl</artifactId>
   <version>0.1.0</version>
   <!-- <name> formatting is used by autorelease to parse and notify projects on
        build failure. Please do not modify this unless you have a good reason. -->
-  <name>ODL :: org.jbh.controller :: ${project.artifactId}</name>
+  <name>ODL :: org.jbh.flowcontroller :: ${project.artifactId}</name>
   <packaging>bundle</packaging>
 
   <dependencyManagement>
@@ -41,7 +41,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <dependencies>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>controller-api</artifactId>
+      <artifactId>flowcontroller-api</artifactId>
       <version>${project.version}</version>
     </dependency>
 
@@ -62,6 +62,45 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <!-- Add -->
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-service</artifactId>
+      <version>0.6.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.l2switch.loopremover</groupId>
+      <artifactId>loopremover-model</artifactId>
+      <version>0.7.3</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.l2switch.addresstracker</groupId>
+      <artifactId>addresstracker-model</artifactId>
+      <version>0.7.3</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-base</artifactId>
+      <version>0.6.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin</groupId>
+      <artifactId>openflowplugin-api</artifactId>
+      <version>0.6.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.controller.model</groupId>
+      <artifactId>model-inventory</artifactId>
+      <version>1.7.3</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -78,6 +117,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
         <artifactId>findbugs-maven-plugin</artifactId>
         <configuration>
           <failOnError>true</failOnError>
+		  <skip>true</skip><!-- 添加skip属性 跳过findbugs -->
         </configuration>
       </plugin>
     </plugins>
