--- a/controller/impl/pom.xml
+++ b/controller/impl/pom.xml
@@ -92,6 +92,16 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
       <version>0.6.3</version>
     </dependency>
     <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-service</artifactId>
+      <version>0.6.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opendaylight.openflowplugin.model</groupId>
+      <artifactId>model-flow-statistics</artifactId>
+      <version>0.6.3</version>
+    </dependency>
+    <dependency>
       <groupId>org.opendaylight.openflowplugin</groupId>
       <artifactId>openflowplugin-api</artifactId>
       <version>0.6.3</version>
